# Civil

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.yaml  .stylelintrc.ts  CLAUDE.md  Dockerfile  Dockerfile.vps  README.md  TODO.md  app.config.ts  astro.config.ts  ava.config.js  biome.json  build.sh  docker-compose.yml  index.ts  localForagePath.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rammerhead.d.ts  removeTypes.ts  run.ts  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
config/: README.md  devServer.ts
config/encoder/: build.sh  example.js  tsc  xor_encoder.d.ts  xor_encoder.js  xor_encoder.wasm
config/protectors/: .gitignore  pyproject.toml
config/protectors/internal/server/: __main__.py
config/rammerheadenc/: .gitignore  Cargo.toml  README.md  build.sh  esbuild.js  package.json
docker/: Dockerfile  vps.Dockerfile
misc/: README.md
misc/config/: bundle.js
misc/database/: auth.ts  bannedDomains.ts  cache.ts  db.ts  drizzle.config.ts  graphql.ts  index.ts  middleware.ts  schema.ts
misc/filters/: filterBlockerMiddleware.ts  posthog.ts  sharedMiddleware.ts
misc/goguardian-keys/: api.ts
misc/school-districts/: api.ts  db.ts  setup.ts
patches/: @solidjs%2Fstart@2.0.0-alpha.2.patch  @tanstack%2Fsolid-router@2.0.0-beta.17.patch  chii@1.15.5.patch
public/: ads.txt  sw.d.ts  sw.js
src/: app.tsx  comet.d.ts  entry-client.tsx  entry-server.tsx  middleware.ts  routeTree.gen.ts  router.tsx
tests/: .gitignore  rammerhead.js  runBenchmarks.js  xor.js
types/: chii.d.ts  rammerhead.d.ts  wisp-js.d.ts
(+226 files in other folders)
