[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-protector"
version = "0.1.0"
description = "With this package, you can finally keep your proxies safe, secure, and protected."
requires-python = ">=3.8"
dependencies = [
    "httpcore",
    "flask",
    "adblock",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools]
packages = ["external.client", "external.server"]

[tool.setuptools.package-dir]
"external.client" = "external/client"
"external.server" = "external/server"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
